@@ -102,10 +102,36 @@ Description: GRand Unified Bootloader, version 2 (emulated version)
  This package contains grub-emu, an emulated version of GRUB.  It is only
  provided for debugging purposes.
 
+Package: grub-pc-bin
+Priority: optional
+Architecture: any-i386 any-amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version})
+Replaces: grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-pc (<< 1.99~rc2-1)
+Suggests: desktop-base (>= 4.0.6)
+Multi-Arch: foreign
+Description: GRand Unified Bootloader, version 2 (PC/BIOS binaries)
+ GRUB is a portable, powerful bootloader.  This version of GRUB is based on a
+ cleaner design than its predecessors, and provides the following new features:
+ .
+  - Scripting in grub.cfg using BASH-like syntax.
+  - Support for modern partition maps such as GPT.
+  - Modular generation of grub.cfg via update-grub.  Packages providing GRUB
+    add-ons can plug in their own script rules and trigger updates by invoking
+    update-grub2.
+  - VESA-based graphical mode with background image support and complete 24-bit
+    color set.
+  - Support for extended charsets.  Users can write UTF-8 text to their menu
+    entries.
+ .
+ This package contains a version of GRUB that has been built for use with
+ traditional PC/BIOS architecture.  It will not automatically install GRUB
+ as the active boot loader, nor will it automatically update grub.cfg on
+ upgrade, so most people should install grub-pc instead.
+
 Package: grub-pc
 Priority: optional
 Architecture: any-i386 any-amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version}), ucf, freebsd-utils (>= 8.0-4) [kfreebsd-any]
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub-pc-bin (= ${binary:Version}), ucf, freebsd-utils (>= 8.0-4) [kfreebsd-any]
 Replaces: grub, grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-ieee1275
 Conflicts: grub (<< 0.97-54), grub-legacy, grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-ieee1275
 Multi-Arch: foreign
@@ -138,9 +164,30 @@ Description: GRUB bootable rescue images, version 2 (PC/BIOS version)
   - grub-rescue-cdrom.iso: El Torito CDROM image.
   - grub-rescue-usb.img: USB image.
 
+Package: grub-coreboot-bin
+Architecture: any-i386 any-amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version})
+Replaces: grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-linuxbios, grub-coreboot (<< 1.99~rc2-1)
+Conflicts: grub-linuxbios (<< ${source:Version})
+Multi-Arch: foreign
+Description: GRand Unified Bootloader, version 2 (Coreboot binaries)
+ GRUB is a portable, powerful bootloader.  This version of GRUB is based on a
+ cleaner design than its predecessors, and provides the following new features:
+ .
+  - Scripting in grub.cfg using BASH-like syntax.
+  - Support for modern partition maps such as GPT.
+  - Modular generation of grub.cfg via update-grub.  Packages providing GRUB
+    add-ons can plug in their own script rules and trigger updates by invoking
+    update-grub2.
+ .
+ This package contains a version of GRUB that has been built for use with
+ platforms running the Coreboot firmware.  It will not automatically install
+ GRUB as the active boot loader, nor will it automatically update grub.cfg
+ on upgrade, so most people should install grub-coreboot instead.
+
 Package: grub-coreboot
 Architecture: any-i386 any-amd64
-Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub-coreboot-bin (= ${binary:Version}), ucf
 Replaces: grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-linuxbios, grub-efi-amd64, grub-efi-ia32, grub-pc, grub-ieee1275
 Conflicts: grub (<< 0.97-54), grub-legacy, grub-linuxbios (<< ${source:Version}), grub-efi-amd64, grub-efi-ia32, grub-pc, grub-ieee1275
 Multi-Arch: foreign
@@ -157,9 +204,30 @@ Description: GRand Unified Bootloader, version 2 (Coreboot version)
  This package contains a version of GRUB that has been built for use with
  platforms running the Coreboot firmware.
 
+Package: grub-efi-ia32-bin
+Architecture: any-i386 any-amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version}), efibootmgr [i386 amd64]
+Replaces: grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi, grub-efi-ia32 (<< 1.99~rc2-1)
+Multi-Arch: foreign
+Description: GRand Unified Bootloader, version 2 (EFI-IA32 binaries)
+ GRUB is a portable, powerful bootloader.  This version of GRUB is based on a
+ cleaner design than its predecessors, and provides the following new features:
+ .
+  - Scripting in grub.cfg using BASH-like syntax.
+  - Support for modern partition maps such as GPT.
+  - Modular generation of grub.cfg via update-grub.  Packages providing GRUB
+    add-ons can plug in their own script rules and trigger updates by invoking
+    update-grub2.
+ .
+ This package contains a version of GRUB that has been built for use with
+ EFI-IA32 architecture, such as the one provided by Intel Macs (that is, unless
+ a BIOS interface has been activated).  It will not automatically install
+ GRUB as the active boot loader, nor will it automatically update grub.cfg
+ on upgrade, so most people should install grub-efi-ia32 instead.
+
 Package: grub-efi-ia32
 Architecture: any-i386 any-amd64
-Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf, efibootmgr [i386 amd64]
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub-efi-ia32-bin (= ${binary:Version}), ucf
 Replaces: grub, grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi, grub-efi-amd64, grub-pc, grub-coreboot, grub-ieee1275
 Conflicts: grub (<< 0.97-54), grub-legacy, grub-efi-amd64, grub-pc, grub-coreboot, grub-ieee1275
 Multi-Arch: foreign
@@ -177,9 +245,30 @@ Description: GRand Unified Bootloader, version 2 (EFI-IA32 version)
  EFI-IA32 architecture, such as the one provided by Intel Macs (that is, unless
  a BIOS interface has been activated).
 
+Package: grub-efi-amd64-bin
+Architecture: i386 kopensolaris-i386 any-amd64
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version}), efibootmgr [i386 amd64]
+Replaces: grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi-amd64 (<< 1.99~rc2-1)
+Multi-Arch: foreign
+Description: GRand Unified Bootloader, version 2 (EFI-AMD64 binaries)
+ GRUB is a portable, powerful bootloader.  This version of GRUB is based on a
+ cleaner design than its predecessors, and provides the following new features:
+ .
+  - Scripting in grub.cfg using BASH-like syntax.
+  - Support for modern partition maps such as GPT.
+  - Modular generation of grub.cfg via update-grub.  Packages providing GRUB
+    add-ons can plug in their own script rules and trigger updates by invoking
+    update-grub2.
+ .
+ This package contains a version of GRUB that has been built for use with
+ EFI-AMD64 architecture, such as the one provided by Intel Macs (that is, unless
+ a BIOS interface has been activated).  It will not automatically install
+ GRUB as the active boot loader, nor will it automatically update grub.cfg
+ on upgrade, so most people should install grub-efi-amd64 instead.
+
 Package: grub-efi-amd64
 Architecture: i386 kopensolaris-i386 any-amd64
-Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf, efibootmgr [i386 amd64]
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub-efi-amd64-bin (= ${binary:Version}), ucf
 Replaces: grub, grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-pc, grub-efi-ia32, grub-coreboot, grub-ieee1275
 Conflicts: grub, grub-legacy, grub-efi-ia32, grub-pc, grub-coreboot, grub-ieee1275
 Multi-Arch: foreign
@@ -209,13 +298,33 @@ Description: GRUB bootable rescue images, version 2 (EFI-AMD64 version)
   - grub-rescue-cdrom.iso: El Torito CDROM image.
   - grub-rescue-usb.img: USB image.
 
+Package: grub-ieee1275-bin
+Architecture: any-i386 any-amd64 any-powerpc any-ppc64 any-sparc
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version}),
+ powerpc-ibm-utils [any-powerpc any-ppc64], powerpc-utils [any-powerpc any-ppc64], bc [any-powerpc any-ppc64]
+Replaces: grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-ieee1275 (<< 1.99~rc2-1)
+Suggests: genisoimage [any-powerpc any-ppc64]
+Multi-Arch: foreign
+Description: GRand Unified Bootloader, version 2 (Open Firmware binaries)
+ GRUB is a portable, powerful bootloader.  This version of GRUB is based on a
+ cleaner design than its predecessors, and provides the following new features:
+ .
+  - Scripting in grub.cfg using BASH-like syntax.
+  - Support for modern partition maps such as GPT.
+  - Modular generation of grub.cfg via update-grub.  Packages providing GRUB
+    add-ons can plug in their own script rules and trigger updates by invoking
+    update-grub2.
+ .
+ This package contains a version of GRUB that has been built for use with
+ Open Firmware implementations.  It will not automatically install GRUB as
+ the active boot loader, nor will it automatically update grub.cfg on
+ upgrade, so most people should install grub-ieee1275 instead.
+
 Package: grub-ieee1275
 Architecture: any-i386 any-amd64 any-powerpc any-ppc64 any-sparc
-Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}),
- powerpc-ibm-utils [any-powerpc any-ppc64], powerpc-utils [any-powerpc any-ppc64], bc [any-powerpc any-ppc64], ${misc:Depends}, ucf
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub-ieee1275-bin (= ${binary:Version}), ucf
 Replaces: grub-legacy, grub2 (<< ${source:Version}), grub-common (<= 1.96+20080413-1), grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-pc
 Conflicts: grub (<< 0.97-54), grub-legacy, grub-efi-amd64, grub-efi-ia32, grub-coreboot, grub-pc
-Suggests: genisoimage [any-powerpc any-ppc64]
 Multi-Arch: foreign
 Description: GRand Unified Bootloader, version 2 (Open Firmware version)
  GRUB is a portable, powerful bootloader.  This version of GRUB is based on a
@@ -249,9 +358,29 @@ Description: GRUB firmware image for QEMU
  you want to install GRUB as firmware on real hardware, you need to use the
  grub-coreboot package, and manually combine that with coreboot.
 
+Package: grub-yeeloong-bin
+Architecture: any-mipsel
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub2-common (= ${binary:Version})
+Replaces: grub-common (<< 1.98+20100617-2), grub-yeeloong (<< 1.99~rc2-1)
+Multi-Arch: foreign
+Description: GRand Unified Bootloader, version 2 (Yeeloong binaries)
+ GRUB is a portable, powerful bootloader.  This version of GRUB is based on a
+ cleaner design than its predecessors, and provides the following new features:
+ .
+  - Scripting in grub.cfg using BASH-like syntax.
+  - Support for modern partition maps such as GPT.
+  - Modular generation of grub.cfg via update-grub.  Packages providing GRUB
+    add-ons can plug in their own script rules and trigger updates by invoking
+    update-grub2.
+ .
+ This package contains a version of GRUB that has been built for use with
+ the Lemote Yeeloong laptop.  It will not automatically install GRUB as the
+ active boot loader, nor will it automatically update grub.cfg on upgrade,
+ so most people should install grub-yeeloong instead.
+
 Package: grub-yeeloong
 Architecture: any-mipsel
-Depends: ${shlibs:Depends}, grub2-common (= ${binary:Version}), ${misc:Depends}, ucf
+Depends: ${shlibs:Depends}, ${misc:Depends}, grub-yeeloong-bin (= ${binary:Version}), ucf
 Replaces: grub-common (<< 1.98+20100617-2)
 Multi-Arch: foreign
 Description: GRand Unified Bootloader, version 2 (Yeeloong version)
