@@ -1,0 +1,2 @@
+usr/bin/grub-ntldr-img			usr/lib/grub/@CPU_PLATFORM@
+usr/sbin/grub-setup			usr/lib/grub/@CPU_PLATFORM@
