@@ -1,0 +1,2 @@
+usr/lib/grub/@CPU_PLATFORM@/grub-ntldr-img	usr/bin/grub-ntldr-img
+usr/lib/grub/@CPU_PLATFORM@/grub-setup		usr/sbin/grub-setup
