@@ -1,0 +1,6 @@
+../../debian/presubj			usr/share/bug/@PACKAGE@
+../../debian/script			usr/share/bug/@PACKAGE@
+
+usr/lib/grub/@CPU_PLATFORM@/
+usr/sbin/grub-install			usr/lib/grub/@CPU_PLATFORM@
+usr/sbin/grub-mknetdir			usr/lib/grub/@CPU_PLATFORM@
