@@ -1,0 +1,2 @@
+usr/lib/grub/@CPU_PLATFORM@/grub-install	usr/sbin/grub-install
+usr/lib/grub/@CPU_PLATFORM@/grub-mknetdir	usr/sbin/grub-mknetdir
